# poker_app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  diagnosis.md  docker-compose.yml  main.py  pyproject.toml  stat_catalog.json
src/poker/: aggregator.py  models.py  normalizer.py  parser.py  patterns.py  stat_engine.py
static/: explorer.css
templates/: explorer.html
tests/: conftest.py  test_population_integration.py  test_population_sample.py
